platform/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pub-in-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pub-in-api
  template:
    metadata:
      labels:
        app: pub-in-api
    spec:
      containers:
        - name: pub-in-api
          image: rodrigodiez/pubin-api:${CIRCLE_SHA1}
          ports:
            - containerPort: 8080
