platform/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pub-in-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: pub-in-svc
---
