platform/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pub-in-svc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pub-in.lab.rodrigodiez.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              serviceName: pub-in-svc
              servicePort: 80
